<resources>
    <string name="app_name">Alpha-Omega Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="enter_button">Enter</string>
    <string name="title_activity_main__menu">Main_Menu</string>
    <string name="Welcome_Supplier">Alpha - Omega</string>
    <string name="Messages">Messages</string>
    <string name="Edit_Products">Edit Products</string>
    <string name="Upload_Products">Upload Products</string>
    <string name="Search_Button">Search</string>
    <string name="Picture">Picture</string>
    <string name="Door_Locks">Door Locks</string>
    <string name="Magnetic_Sensors">Magnetic Sensors</string>
    <string name="Thermal_Image">Thermal Image</string>
    <string name="Door_Camera">Door Camera</string>

    <string name="title_activity_locks">Locks</string>
    <string name="title_activity_alert">Alerts</string>
    <string name="title_activity_magnetic_sensor">Magnetic Sensors</string>
    <string name="title_activity_thermal_images">Thermal Images</string>
    <string name="title_activity_camera">Camera</string>
    <string name="Company_Name">Company Name</string>
    <string name="Product_Name">Product Name</string>
    <string name="Price">Price ($USD)</string>
    <string name="Per_Unit">How Many Units?</string>
    <string name="Short_Desc">Short Description</string>
    <string name="Submit">Submit</string>
    <string name="Return">Return</string>
    <string name="About_this_app">About This Group</string>
    <string name="title_activity_about">About</string>
    <string name="title__activity_main_menu">Main Menu</string>
    <string name="title_activity_edit__page">Edit_Page</string>
    <string name="title_activity_view__products">View_Products</string>
    <string name="Product">Product</string>
    <string name="Welcome_Messsage">Alpha - Omega</string>
    <string name="App_for_Biz">Mobile Application Home Security</string>
    <string name="UserID">User ID</string>
    <string name="Pin">Pin</string>
    <string name="Password">Password</string>
    <string name="Snr_Design_Message">Fall 2017 EE Senior Design</string>
    <string name="FrontDoor">Front Door</string>
    <string name="BackDoor">Back Door</string>
    <string name="Garage">Garage</string>
    <string name="SideDoor">Side Door</string>
    <string name="Connected">Connected</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Locked">Locked</string>
    <string name="Unlocked">Unlocked</string>
    <string name="Refresh">Refresh</string>
    <string name="Status">Status</string>
    <string name="Open">Open</string>
    <string name="Doors">Doors</string>
    <string name="Camera">Camera</string>
    <string name="Bio_default">Bio</string>
    <string name="Alert_Text">This person is at your door. Navigate to Unlock Menu to Unlock.</string>
    <string name="Camera_Instructions">Press Image to Navigate Through Saved Photos</string>

</resources>
