<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="swiftproduct.swift.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#87e15e">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_Messsage"
        android:id="@+id/Welcome"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />
    <ImageButton
        android:layout_width="710dp"
        android:layout_height="450dp"
        android:src="@drawable/logo"
        android:id="@+id/imageButton"
        android:scaleType="fitXY"
        android:background="#87e15e"
        android:gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/Welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App_for_Biz"
        android:id="@+id/Swift_Message"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imageButton"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UserID"
        android:layout_below="@+id/Swift_Message"
        android:text="@string/UserID"
        android:textSize="32sp"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/IP"
        android:textSize="32sp"
        android:layout_below="@+id/UserID"
        android:text="@string/Password"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/Pin"
        android:ems="10"
        android:id="@+id/Pin"
        android:textSize="32sp"
        android:layout_below="@+id/IP"
        android:gravity="center"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_button"
        android:id="@+id/enter_button"
        android:background="#5fb04d"
        android:layout_below="@+id/Pin"
        android:textSize="32sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
