<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="swiftproduct.swift.Main_Menu"
    tools:showIn="@layout/activity_main__menu"
    android:background="#87e15e">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Welcome_Supplier"
        android:textSize="50sp"
        android:id="@+id/Welcome_Message"
        android:clickable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/Welcome_SupplierBackgroundHeader"
        android:background="@android:color/black"
        android:layout_below="@+id/Welcome_Message"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_this_app"
        android:textSize="50sp"
        android:id="@+id/About_Button"
        android:background="#5fb04d"
        android:layout_below="@+id/Welcome_SupplierBackgroundHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Door_Locks"
        android:textSize="50sp"
        android:id="@+id/Door_Locks_Button"
        android:background="#5fb04d"
        android:layout_below="@+id/About_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Magnetic_Sensors"
        android:textSize="50sp"
        android:id="@+id/Magnetic_Sensors_Button"
        android:background="#5fb04d"
        android:layout_below="@+id/Door_Locks_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Thermal_Image"
        android:textSize="50sp"
        android:id="@+id/Thermal_Image_Button"
        android:background="#808080"
        android:layout_below="@+id/Magnetic_Sensors_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Door_Camera"
        android:textSize="50sp"
        android:id="@+id/Door_Camera_Button"
        android:background="#5fb04d"
        android:layout_below="@+id/Thermal_Image_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/Welcome_SupplierBackgroundFooter"
        android:background="@android:color/black"
        android:layout_above="@+id/Footer_Message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Snr_Design_Message"
        android:id="@+id/Footer_Message"
        android:textSize="40sp"
        android:clickable="false"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="8100dp"
        android:layout_height="550dp"
        android:src="@drawable/logo"
        android:id="@+id/space_taker"
        android:scaleType="fitXY"
        android:gravity="center"
        android:layout_alignTop="@+id/Door_Camera_Button"
        android:layout_alignParentLeft="true" />


</RelativeLayout>
