<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Camera"
    tools:showIn="@layout/activity_camera"
    android:background="#87e15e">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/HeaderLayout"
    android:orientation="horizontal">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/Return"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/ReturntoMain_Camera"
        android:gravity="start"
        android:background="#5fb04d" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Camera"
        android:id="@+id/Upload_Products"
        android:textSize="40sp"
        android:clickable="false"
        android:gravity="center"/>

</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/Upload_ProductsBackground"
        android:background="@android:color/black"
        android:layout_below="@+id/HeaderLayout"/>

    <ImageButton
        android:layout_width="8100dp"
        android:layout_height="350dp"
        android:id="@+id/Camera_Button"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:background="#87e15e"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/Upload_ProductsBackground"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Refresh"
        android:id="@+id/Refresh_Button_Camera"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:background="#5fb04d" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Camera_Instructions"
        android:id="@+id/Instructions"
        android:layout_below="@+id/Camera_Button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
