<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Locks"
    tools:showIn="@layout/activity_locks"
    android:background="#87e15e"
    android:clickable="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HeaderLayout"
        android:orientation="horizontal">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Return"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/ReturntoMain_Locks"
        android:gravity="top"
        android:background="#5fb04d" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Door_Locks"
            android:id="@+id/Door_Locks"
            android:textSize="40sp"
            android:clickable="false"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/MessagesBackground"
        android:background="@android:color/black"
        android:layout_below="@+id/HeaderLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FrontDoor"
        android:id="@+id/Door1"
        android:textSize="33sp"
        android:layout_below="@+id/MessagesBackground"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BackDoor"
        android:id="@+id/Door2"
        android:textSize="33sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Garage"
        android:id="@+id/Door3"
        android:textSize="33sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SideDoor"
        android:id="@+id/Door4"
        android:textSize="33sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status1"
        android:textSize="33sp"
        android:layout_alignTop="@+id/Door1"
        android:layout_alignRight="@+id/MessagesBackground"
        android:layout_alignEnd="@+id/MessagesBackground"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status2"
        android:textSize="33sp"
        android:layout_alignTop="@+id/Door2"
        android:layout_alignRight="@+id/MessagesBackground"
        android:layout_alignEnd="@+id/MessagesBackground"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status3"
        android:textSize="33sp"
        android:layout_alignTop="@+id/Door3"
        android:layout_alignLeft="@+id/Status2"
        android:layout_alignStart="@+id/Status2"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Disconnected"
        android:id="@+id/Status4"
        android:textSize="33sp"
        android:textColor="#ea0b0b"
        android:layout_alignTop="@+id/Door4"
        android:layout_alignLeft="@+id/Status3"
        android:layout_alignStart="@+id/Status3" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textOn="@string/Locked"
        android:textOff="@string/Unlocked"
        android:id="@+id/switch1"
        android:textSize="33sp"
        android:checked="false"
        android:clickable="false"
        android:layout_below="@+id/Door4"
        android:layout_alignLeft="@+id/switch2"
        android:layout_alignStart="@+id/switch2" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textOn="@string/Locked"
        android:textOff="@string/Unlocked"
        android:id="@+id/switch2"
        android:textSize="33sp"
        android:clickable="false"
        android:layout_below="@+id/Door3"
        android:layout_alignLeft="@+id/switch3"
        android:layout_alignStart="@+id/switch3" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textOn="@string/Locked"
        android:textOff="@string/Unlocked"
        android:id="@+id/switch3"
        android:textSize="33sp"
        android:clickable="false"
        android:layout_below="@+id/Door2"
        android:layout_alignLeft="@+id/DoorSwitch"
        android:layout_alignStart="@+id/DoorSwitch" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textOn="@string/Locked"
        android:textOff="@string/Unlocked"
        android:id="@+id/DoorSwitch"
        android:textSize="33sp"
        android:clickable="true"
        android:layout_below="@+id/Door1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Refresh"
        android:id="@+id/Refresh_Button_Locks"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:background="#5fb04d" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:gravity="center"
        android:layout_below="@+id/switch1"
        android:layout_alignRight="@+id/Status4"
        android:layout_alignEnd="@+id/Status4" />

</RelativeLayout>
