<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Magnetic_Sensors"
    tools:showIn="@layout/activity_magnetic_sensor"
    android:background="#87e15e">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HeaderLayout"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/Return"
            android:textAlignment="center"
            android:textSize="20sp"
            android:id="@+id/ReturntoMain_Doors"
            android:gravity="top"
            android:background="#5fb04d" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Doors"
            android:textSize="40sp"
            android:clickable="false"
            android:gravity="center"/>
    </LinearLayout>
        <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/SearchBackground"
        android:background="@android:color/black"
        android:layout_below="@+id/HeaderLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FrontDoor"
        android:id="@+id/Door1"
        android:textSize="33sp"
        android:layout_below="@+id/SearchBackground"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BackDoor"
        android:id="@+id/Door2"
        android:textSize="33sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Garage"
        android:id="@+id/Door3"
        android:textSize="33sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SideDoor"
        android:id="@+id/Door4"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Door3"
        android:textSize="33sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status1"
        android:layout_alignTop="@+id/Door1"
        android:textSize="33sp"
        android:layout_alignRight="@+id/SearchBackground"
        android:layout_alignEnd="@+id/SearchBackground"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status2"
        android:textSize="33sp"
        android:layout_alignTop="@+id/Door2"
        android:layout_alignRight="@+id/SearchBackground"
        android:layout_alignEnd="@+id/SearchBackground"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Disconnected"
        android:id="@+id/Status3"
        android:textSize="33sp"
        android:layout_alignTop="@+id/Door3"
        android:layout_alignLeft="@+id/Status2"
        android:layout_alignStart="@+id/Status2"
        android:textColor="#ea0b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Disconnected"
        android:id="@+id/Status4"
        android:textSize="33sp"
        android:textColor="#ea0b0b"
        android:layout_alignTop="@+id/Door4"
        android:layout_alignLeft="@+id/Status3"
        android:layout_alignStart="@+id/Status3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Refresh"
        android:id="@+id/Refresh_Button_Doors"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:background="#5fb04d" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:gravity="center"
        android:layout_below="@+id/Door4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
