<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="swiftproduct.swift.Edit_Page"
    tools:showIn="@layout/activity_edit__page"
    android:background="#87e15e">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HeaderLayout"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="@string/Return"
            android:textAlignment="center"
            android:textSize="12sp"
            android:id="@+id/ReturntoMain_EditPage"
            android:gravity="start"
            android:background="#5fb04d" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Edit_Products"
            android:id="@+id/Edit_ProductsPage"
            android:textSize="35sp"
            android:clickable="false"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/Edit_ProductsPageBackground"
        android:background="@android:color/black"
        android:layout_below="@+id/HeaderLayout"/>
    <ScrollView
        android:id="@+id/Edit_Scroll_View"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Edit_ProductsPageBackground"
        android:background="#87e15e"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Company_Name"
                android:id="@+id/Company_NameEdit" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Name"
                android:text=""
                android:ems="10"
                android:id="@+id/edit_Company_NameEdit"

                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Product_Name"
                android:id="@+id/Product_NameEdit"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Name"
                android:text=""
                android:ems="10"
                android:id="@+id/edit_Product_NameEdit"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Price"
                android:id="@+id/Price"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="0"
                android:text=""
                android:ems="10"
                android:id="@+id/edit_PriceEdit"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Per_Unit"
                android:id="@+id/Unit"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="0"
                android:text=""
                android:ems="10"
                android:id="@+id/edit_UnitEdit"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Short_Desc"
                android:id="@+id/Short_Desc"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Give a description...."
                android:text=""
                android:ems="10"
                android:id="@+id/edit_Short_DescEdit"
                android:layout_marginTop="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:id="@+id/Submit_Edit_Product_Button"
                android:background="#5fb04d" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>

